Add Plex.tv PIN authentication flow
Introduces support for Plex.tv PIN authentication in the config flow, allowing users to securely link their Plex account. Updates documentation, translations, and manifest to reflect new authentication options and repository URL.

--- a/custom_components/plex_custom/manifest.json
+++ b/custom_components/plex_custom/manifest.json
@@ -1,7 +1,7 @@
 {
   "domain": "plex_custom",
   "name": "Plex Custom Control",
-  "documentation": "https://github.com/macbookm/plex_custom",
+  "documentation": "https://github.com/haumlab/plex-hacs",
   "requirements": ["plexapi==4.15.15"],
   "dependencies": [],
   "codeowners": ["@macbookm"],
