--- a/custom_components/plex_custom/manifest.json
+++ b/custom_components/plex_custom/manifest.json
@@ -4,8 +4,10 @@
   "documentation": "https://github.com/haumlab/plex-hacs",
   "requirements": ["plexapi==4.15.15"],
   "dependencies": [],
-  "codeowners": ["@macbookm"],
+  "codeowners": ["@haumlab"],
   "version": "1.0.0",
+  "integration_type": "hub",
   "iot_class": "local_polling",
-  "config_flow": true
+  "config_flow": true,
+  "homeassistant": "2023.1.0"
 }
